--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
-  font-family: 'Raleway', sans-serif;
-  background: rgba(242, 242, 242, .6);
+  font-family: "Raleway", sans-serif;
+  background: rgba(242, 242, 242, 0.6);
   margin: 0;
 }
 
 * {
-  box-sizing: border-box
+  box-sizing: border-box;
 }
 
 /*NAVBAR*/
@@ -16,6 +16,7 @@ body {
   width: 100%; /* Full width */
   display: flex;
   justify-content: center;
+
 }
 
 .navbar a {
@@ -23,8 +24,18 @@ body {
   color: white;
   padding: 14px 16px;
   text-decoration: none;
+
 }
 
+.navbar a:hover{
+  background-color: tomato;
+  /* -webkit-transition: 1s pulse;
+  transition: 1s pulse; */
+  -webkit-transition: all 0.5 ease-in-out;
+  -moz-transition: all 0.5 ease-in-out;
+  -o-transition: all 0.5 ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
 .anchor {
   display: block;
   position: relative;
@@ -87,6 +98,8 @@ body {
   margin-top: auto;
   text-align: center;
   margin-bottom: 50px;
+
+  
 }
 
 #down-arrow a {
@@ -96,6 +109,8 @@ body {
   background-color: whitesmoke;
   padding: 12px;
   border-radius: 50%;
+  -webkit-transition: 0.5s ease all;
+  transition: 0.5s ease all;
 }
 /*CONTENT*/
 .container {
@@ -133,9 +148,9 @@ body {
 }
 
 .box-shadow {
-  -webkit-box-shadow: 10px 10px 10px 10px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.75);
-  box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.75);
 }
 
 h2 {
@@ -148,7 +163,11 @@ h2 {
 
 .content-body {
   line-height: 1.5;
-  color: rgba(0,0,0,.75);
+  color: rgba(0, 0, 0, 0.75);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 /*EDUCATION*/
@@ -156,22 +175,23 @@ h2 {
   display: flex;
   flex-direction: column;
   background-color: white;
-  border: 1px solid rgba(0,0,0,.125);
-  border-radius: .25rem;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
   margin-bottom: 30px;
-  box-shadow: 2px 2px 5px 2px rgba(0,0,0,.3);
+  box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.3);
 }
 
 .card-header {
-  padding: .75rem 1.25rem;
+  padding: 0.75rem 1.25rem;
   background-color: white;
-  border-bottom: 1px solid rgba(0,0,0,.3);
-  border-top-left-radius: .25rem;
-  border-top-right-radius: .25rem;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
 }
 
 .card-content {
-  padding: .25rem 1.25rem;
+  padding: 0.25rem 2rem;
+align-self: center;
   flex: 1 1 auto;
 }
 
@@ -189,23 +209,21 @@ h4 {
 .project-card {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  text-align: center;
   background-color: white;
-  border: 1px solid rgba(0,0,0,.125);
+  border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 5px;
   margin-bottom: 30px;
-  box-shadow: 2px 2px 5px 2px rgba(0,0,0,.3);}
-
-.project-image {
-  flex: 1 0 auto;
+  box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.3);
+  width: 400px;
 }
 
 .project-image img {
-  display: block;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
-  width: 340px;
+  width: 400px;
   height: auto;
-
 }
 
 .project-content {
@@ -214,13 +232,15 @@ h4 {
 
   display: flex;
   justify-content: center;
-  flex-direction: inherit ;
+  flex-direction: column;
 }
 
 /*SKILLS*/
 .ul-skills {
   text-align: center;
   padding-left: 0;
+  padding: 80px 10px;
+  box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.3);
 }
 
 .li-skills {
@@ -232,6 +252,8 @@ h4 {
   list-style: none;
   cursor: default;
   font-size: 1.2em;
+  box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
 }
 
 /*CONTACT*/
@@ -245,7 +267,8 @@ h4 {
   margin: 0 auto;
 }
 
-.contact input, .contact textarea {
+.contact input,
+.contact textarea {
   display: block;
   width: 100%;
   padding: 10px;
@@ -254,12 +277,13 @@ h4 {
   margin-bottom: 10px;
   background: #1d6fa5;
   color: #fff;
-  -webkit-transition: .5s ease all;
-  transition: .5s ease all;
+  -webkit-transition: 0.5s ease all;
+  transition: 0.5s ease all;
 }
 
 .contact textarea {
   height: 150px;
+  width: 450px;
   resize: none;
 }
 
@@ -268,13 +292,13 @@ h4 {
   width: 100%;
   background: #fff;
   border-radius: 4px;
-  padding: 5px 10px;
+  padding: 10px 10px;
   border: none;
   color: #3498db;
   font-weight: 700;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  -webkit-transition: .5s ease all;
-  transition: .5s ease all;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -webkit-transition: 0.5s ease all;
+  transition: 0.5s ease all;
 }
 
 .white-text {
