--- a/style.css
+++ b/style.css
@@ -43,10 +43,8 @@ body {
 
 /*JUMBOTRON*/
 .jumbotron {
-  height: 100vh; /*height to 100% of view height*/
+  height: 100%; /*height to 100% of view height*/
   background: #31b0d5; /*background color to blue*/
-  margin-bottom: 0; /*no bottom margin*/
-
   display: flex;
   flex-direction: column;
 }
@@ -75,6 +73,7 @@ body {
 /*SOCIAL LINKS*/
 .ul-social {
   text-align: center;
+  margin-top: 30px;
   padding-left: 0;
 }
 
@@ -84,7 +83,7 @@ body {
 }
 
 .social {
-  font-size: 1.8em;
+  font-size: 1em;
   color: white;
   padding: 20px;
 }
@@ -93,9 +92,9 @@ body {
 #down-arrow {
   /*position: absolute;
   width: 100%;*/
-  margin-top: auto;
+
   text-align: center;
-  margin-bottom: 50px;
+  margin: 50px;
 }
 
 #down-arrow a {
