--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-  font-family: "Raleway", sans-serif;
+  /* font-family: "Raleway", sans-serif; */
+  font-family: 'Montserrat', sans-serif;
   background: rgba(242, 242, 242, 0.6);
   margin: 0;
 }
@@ -12,27 +13,43 @@ body {
 .navbar {
   background-color: #31b0d5;
   position: fixed; /* Set the navbar to fixed position */
-  top: 0; /* Position the navbar at the top of the page */
+  top: 5px; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
   display: flex;
   justify-content: center;
 }
-
 .navbar a {
   font-weight: 400;
   color: white;
   padding: 14px 16px;
+  /* background-color: rgb(0, 0, 0); */
   text-decoration: none;
+  
 }
 
 .navbar a:hover {
-  background-color: teal;
-  /* -webkit-transition: 1s pulse;
-  transition: 1s pulse; */
-  -webkit-transition: all 0.5 ease-in-out;
-  -moz-transition: all 0.5 ease-in-out;
-  -o-transition: all 0.5 ease-in-out;
+  color: teal;
   transition: all 0.5s ease-in-out;
+  /* border-radius: 50px; */
+
+}
+.logo{
+  margin: auto;
+  width: 150px;
+  text-align: center;
+  padding: 7px;
+  border-radius: 60px;
+  background-color: burlywood;
+  color: teal;
+}
+.contact-right{
+  margin: auto;
+  width: 150px;
+  text-align: center;
+  padding: 7px;
+  border-radius: 60px;
+  background-color: burlywood;
+  color: teal;
 }
 .anchor {
   display: block;
@@ -43,7 +60,7 @@ body {
 
 /*JUMBOTRON*/
 .jumbotron {
-  height: 100%; /*height to 100% of view height*/
+  height: 100vh; /*height to 100% of view height*/
   background: #31b0d5; /*background color to blue*/
   display: flex;
   flex-direction: column;
@@ -56,7 +73,6 @@ body {
   color: white;
   text-align: center;
   padding-top: 150px;
-  margin-right: 7%;
 }
 
 .jumbotron-text h1 {
@@ -93,37 +109,22 @@ body {
   display: flex;
   flex-wrap: wrap;
   float: right;
+  margin-right: 100px;
   width: 350px;
   border-radius: 50%;
 }
-.personalpic:hover {
-  opacity: 0.9;
-  background-color: #0000;
-}
 @media screen and (max-width: 425px) {
-  .personalpic {
+  .personalpic{
     float: none;
-    margin: 0 auto;
+    margin: auto;
   }
-}
-/*ARROW LINK*/
-#down-arrow {
-  /*position: absolute;
-  width: 100%;*/
-
-  text-align: center;
-  margin: 50px;
-}
-
-#down-arrow a {
-  color: white;
-}
-#down-arrow a:hover {
-  background-color: whitesmoke;
-  padding: 12px;
-  border-radius: 50%;
-  -webkit-transition: 0.5s ease all;
-  transition: 0.5s ease all;
+  .container{
+    width: 150%;
+  }
+  .ul-skills {
+    width: 100%;
+  }
+  
 }
 /*CONTENT*/
 .container {
@@ -181,6 +182,7 @@ h2 {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  font-weight: 400;
 }
 
 /*EDUCATION*/
@@ -192,6 +194,7 @@ h2 {
   border-radius: 0.25rem;
   margin-bottom: 30px;
   box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.3);
+  width: max-content;
 }
 
 .card-header {
@@ -212,10 +215,13 @@ h4 {
   margin: 0;
   font-weight: 400;
   color: grey;
+  font-size: 20px;
+  font-weight: 600;
+
 }
 
 .job-title {
-  float: right;
+  margin: 20px;
 }
 
 /*PROJECTS*/
@@ -229,7 +235,9 @@ h4 {
   border-radius: 5px;
   margin-bottom: 30px;
   box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.3);
-  width: 400px;
+  width: 450px;
+  font-weight: 300;
+  font-size: 18px;
 }
 
 .btn1 {
@@ -238,8 +246,8 @@ h4 {
   color: white;
   padding: 5px;
   border-radius: 5px;
-  width: 150px;
-  margin-left: 32px;
+  width: 160px;
+  margin-left: 45px;
   margin-bottom: 20px;
 }
 /* .btn2{
@@ -255,28 +263,31 @@ h4 {
 .project-image img {
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
-  width: 400px;
+  width: 450px;
   height: auto;
 }
 
 .project-content {
   flex: 1 1 auto;
   padding: 1.25rem;
-
   display: flex;
   justify-content: center;
   flex-direction: column;
+  font-size: 18px;
+  font-weight: 300;
 }
-
+/* .project-card h4{
+  font-size: 30px;
+  font-weight: 600;
+} */
 /*SKILLS*/
 .ul-skills {
   text-align: center;
   padding-left: 0;
-  padding: 80px 10px;
+  padding: 20px 10px;
   box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.3);
   border-radius: 4px;
 }
-
 .li-skills {
   display: inline-block;
   margin: 7px;
@@ -285,7 +296,7 @@ h4 {
   background: #31b0d5;
   list-style: none;
   cursor: default;
-  font-size: 1.2em;
+  font-size: 19px;
   box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
@@ -304,11 +315,12 @@ h4 {
 .contact textarea {
   width: 100%;
   padding: 10px;
+  font-size: 18px;
   border-radius: 4px;
   border: none;
   margin-bottom: 10px;
   background: #53575a;
-  color: #fff;
+  color: white;
   -webkit-transition: 0.5s ease all;
   transition: 0.5s ease all;
 }
@@ -317,12 +329,14 @@ h4 {
   height: 150px;
   width: 100%;
   resize: none;
+  font-size: 18px;
 }
 
 .contact button {
   display: block;
   width: 100%;
   background: #53575a;
+  font-size: 18px;
   border-radius: 4px;
   padding: 10px 10px;
   border: none;
