--- a/style.css
+++ b/style.css
@@ -13,8 +13,9 @@ body {
 .navbar {
   background-color: #31b0d5;
   position: fixed; /* Set the navbar to fixed position */
-  top: 5px; /* Position the navbar at the top of the page */
+  top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
+  height: 100px;
   display: flex;
   justify-content: center;
 }
@@ -31,13 +32,27 @@ body {
   color: teal;
   transition: all 0.5s ease-in-out;
   /* border-radius: 50px; */
-
 }
+
+.navbar ul {
+  display: flex;
+  flex-direction: row;
+  font-family: 'Montserrat';
+  text-transform: uppercase;
+  font-size: 20px;
+  justify-content: space-evenly;
+}
+.navbar li {
+  list-style: none;
+}
+
+
 .logo{
   margin: auto;
   width: 150px;
   text-align: center;
   padding: 7px;
+  font-size: 17px;
   border-radius: 60px;
   background-color: burlywood;
   color: teal;
@@ -124,7 +139,51 @@ body {
   .ul-skills {
     width: 100%;
   }
-  
+  .navbar{
+    height: 70px;
+  }
+  .navbar ul {
+    position: absolute;
+    flex-direction: column;
+    height: 100vh;
+    width: 100%;
+    text-align: center;
+    /* background-color: #222222; */
+    clip-path: circle(20px at 95% 5%);
+    -webkit-clip-path: circle(20px at 95% 5%);
+    transition: 0.5s ease-in-out;
+    pointer-events: none;
+  }
+.logo{
+  display: none;
+}
+.contact-right{
+  display: none;
+}
+  .line {
+    position: relative;
+    background-color: white;
+    height: 3px;
+    width: 30px;
+    margin: 5px;
+  }
+  .burger {
+    position: absolute;
+    top: 20px;
+    right: 15px;
+    z-index: 2;
+    cursor: pointer;
+  }
+
+  .navbar ul.open {
+    background-color: #212222;
+    clip-path: circle(1000px at 95% 5%);
+    -webkit-clip-path: circle(1000px at 95% 5%);
+    pointer-events: all;
+  }
+  .navbar ul.close {
+    display: none;
+  }
 }
 /*CONTENT*/
 .container {
@@ -194,7 +253,7 @@ h2 {
   border-radius: 0.25rem;
   margin-bottom: 30px;
   box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.3);
-  width: max-content;
+  text-align: center;
 }
 
 .card-header {
@@ -221,7 +280,7 @@ h4 {
 }
 
 .job-title {
-  margin: 20px;
+  margin: 100px;
 }
 
 /*PROJECTS*/
@@ -350,3 +409,4 @@ h4 {
 .white-text {
   color: white;
 }
+
