--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   /* font-family: "Raleway", sans-serif; */
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   background: rgba(242, 242, 242, 0.6);
   margin: 0;
 }
@@ -11,11 +11,11 @@ body {
 
 /*NAVBAR*/
 .navbar {
-  background-color: #31b0d5;
+  background-color: #212222;
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
-  height: 100px;
+  height: 70px;
   display: flex;
   justify-content: center;
 }
@@ -25,7 +25,6 @@ body {
   padding: 14px 16px;
   /* background-color: rgb(0, 0, 0); */
   text-decoration: none;
-  
 }
 
 .navbar a:hover {
@@ -37,7 +36,7 @@ body {
 .navbar ul {
   display: flex;
   flex-direction: row;
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   text-transform: uppercase;
   font-size: 20px;
   justify-content: space-evenly;
@@ -46,24 +45,24 @@ body {
   list-style: none;
 }
 
-
-.logo{
+.logo {
   margin: auto;
   width: 150px;
   text-align: center;
   padding: 7px;
   font-size: 17px;
   border-radius: 60px;
-  background-color: burlywood;
+  background-color: teal;
   color: teal;
 }
-.contact-right{
+.contact-right {
   margin: auto;
   width: 150px;
   text-align: center;
   padding: 7px;
+  font-size: 17px;
   border-radius: 60px;
-  background-color: burlywood;
+  background-color: teal;
   color: teal;
 }
 .anchor {
@@ -76,7 +75,7 @@ body {
 /*JUMBOTRON*/
 .jumbotron {
   height: 100vh; /*height to 100% of view height*/
-  background: #31b0d5; /*background color to blue*/
+  background: teal; /*background color to blue*/
   display: flex;
   flex-direction: column;
 }
@@ -128,63 +127,7 @@ body {
   width: 350px;
   border-radius: 50%;
 }
-@media screen and (max-width: 425px) {
-  .personalpic{
-    float: none;
-    margin: auto;
-  }
-  .container{
-    width: 150%;
-  }
-  .ul-skills {
-    width: 100%;
-  }
-  .navbar{
-    height: 70px;
-  }
-  .navbar ul {
-    position: absolute;
-    flex-direction: column;
-    height: 100vh;
-    width: 100%;
-    text-align: center;
-    /* background-color: #222222; */
-    clip-path: circle(20px at 95% 5%);
-    -webkit-clip-path: circle(20px at 95% 5%);
-    transition: 0.5s ease-in-out;
-    pointer-events: none;
-  }
-.logo{
-  display: none;
-}
-.contact-right{
-  display: none;
-}
-  .line {
-    position: relative;
-    background-color: white;
-    height: 3px;
-    width: 30px;
-    margin: 5px;
-  }
-  .burger {
-    position: absolute;
-    top: 20px;
-    right: 15px;
-    z-index: 2;
-    cursor: pointer;
-  }
 
-  .navbar ul.open {
-    background-color: #212222;
-    clip-path: circle(1000px at 95% 5%);
-    -webkit-clip-path: circle(1000px at 95% 5%);
-    pointer-events: all;
-  }
-  .navbar ul.close {
-    display: none;
-  }
-}
 /*CONTENT*/
 .container {
   /*sets up flexbox*/
@@ -229,7 +172,7 @@ body {
 h2 {
   font-weight: 600;
   font-size: 2.5rem;
-  color: #31b0d5;
+  color: teal;
   text-transform: uppercase;
   text-align: center;
 }
@@ -241,7 +184,7 @@ h2 {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  font-weight: 400;
+  font-size: 20px;
 }
 
 /*EDUCATION*/
@@ -268,6 +211,7 @@ h2 {
   padding: 0.25rem 2rem;
   align-self: center;
   flex: 1 1 auto;
+  font-size: 20px;
 }
 
 h4 {
@@ -276,11 +220,10 @@ h4 {
   color: grey;
   font-size: 20px;
   font-weight: 600;
-
 }
 
 .job-title {
-  margin: 100px;
+  margin-left: 20px;
 }
 
 /*PROJECTS*/
@@ -343,16 +286,17 @@ h4 {
 .ul-skills {
   text-align: center;
   padding-left: 0;
-  padding: 20px 10px;
+  padding: 20px;
   box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.3);
   border-radius: 4px;
+  width: 100% !important;
 }
 .li-skills {
   display: inline-block;
   margin: 7px;
   padding: 5px 10px;
   color: white;
-  background: #31b0d5;
+  background: teal;
   list-style: none;
   cursor: default;
   font-size: 19px;
@@ -362,7 +306,7 @@ h4 {
 
 /*CONTACT*/
 .blue {
-  background: #3498db;
+  background: teal;
   text-align: center;
 }
 
@@ -375,32 +319,35 @@ h4 {
   width: 100%;
   padding: 10px;
   font-size: 18px;
-  border-radius: 4px;
+  border-radius: 40px;
   border: none;
   margin-bottom: 10px;
-  background: #53575a;
+  background: #212222;
   color: white;
   -webkit-transition: 0.5s ease all;
   transition: 0.5s ease all;
+  text-align: center;
 }
 
 .contact textarea {
   height: 150px;
-  width: 100%;
+  width: 90%;
   resize: none;
   font-size: 18px;
+  border-radius: 10px;
 }
 
 .contact button {
   display: block;
   width: 100%;
-  background: #53575a;
+  background: #212222;
   font-size: 18px;
-  border-radius: 4px;
+  border-radius: 40px;
   padding: 10px 10px;
   border: none;
-  color: #3498db;
+  color: white;
   font-weight: 700;
+  font-size: 20px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   -webkit-transition: 0.5s ease all;
   transition: 0.5s ease all;
@@ -409,4 +356,64 @@ h4 {
 .white-text {
   color: white;
 }
+@media screen and (max-width: 425px) {
+  .personalpic {
+    float: none;
+    margin: auto;
+  }
+  .container {
+    width: 165%;
+  }
+  .ul-skills {
+    width: 100%;
+  }
+  .navbar {
+    height: 70px;
+  }
+  .navbar ul {
+    position: absolute;
+    flex-direction: column;
+    height: 100vh;
+    width: 100%;
+    text-align: center;
+    /* background-color: #222222; */
+    clip-path: circle(20px at 95% 5%);
+    -webkit-clip-path: circle(20px at 95% 5%);
+    transition: 0.5s ease-in-out;
+    pointer-events: none;
+  }
+  .jumbotron {
+    height: 150vh; 
+  }  
+  .logo {
+    display: none;
+  }
+  .contact-right {
+    display: none;
+  }
+  .line {
+    position: relative;
+    background-color: white;
+    height: 3px;
+    width: 30px;
+    margin: 5px;
+  }
+  .burger {
+    position: absolute;
+    top: 20px;
+    right: 15px;
+    z-index: 2;
+    cursor: pointer;
+  }
 
+  .navbar ul.open {
+    background-color: #212222;
+    clip-path: circle(1000px at 95% 5%);
+    -webkit-clip-path: circle(1000px at 95% 5%);
+    pointer-events: all;
+  }
+  .job-title {
+    margin: 100px;
+  }
+  
+}
