--- a/style.css
+++ b/style.css
@@ -123,6 +123,8 @@ color: rgb(1, 73, 73);
   display: flex;
   flex-wrap: wrap;
   float: right;
+  margin-top: 30px;
+  border-radius: 50%/20%;
   margin-right: 100px;
   width: 330px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.6);
