--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
-  height: 60px;
+  height: 70px;
   display: flex;
   justify-content: center;
 }
@@ -37,9 +37,10 @@ color: rgb(1, 73, 73);
   display: flex;
   flex-direction: row;
   font-family: "Montserrat";
-  text-transform: uppercase;
-  font-size: 18px;
+
+  font-size: 14px;
   justify-content: space-evenly;
+padding-top:10px;
 }
 .navbar li {
   list-style: none;
